# Parallel-programming-model

./: .gitignore  CMakeLists.txt  README.md  cmake.txt  task3_schedule.csv  task3_variants.csv
lab1/: README.md  task1.cpp
lab2/: Report.md
lab2/task1/: CMakeLists.txt  Report_task1.md  plot_speedup.py  report.md  speedup_DGEMV_20000.csv  speedup_DGEMV_40000.csv  task1.cpp  task1_report.txt
lab2/task2/: CMakeLists.txt  Report_task2.md  plot_speedup_integral.py  report.md  speedup_integral_40000000.csv  task2.cpp
lab2/task3/: CMakeLists.txt  plot_task3_metrics.py  report.md  speedup_jacobi_6000.csv  task3.cpp  task3_results.csv  task3_schedule.csv  task3_variants.csv
lab3/: Report.md
lab3/task1/: CMakeLists.txt  plot_speedup_task1.py  run_task1_average.py  speedup_dgemv_stdthread_20000.csv  speedup_dgemv_stdthread_40000.csv  task1.cpp
lab3/task2/: CMakeLists.txt  Report_task2.md  benchmark.cpp  client_pow.csv  client_sin.csv  client_sqrt.csv  main.cpp  plot_banchmark.py  server.hpp  server_promise.hpp  server_slot.hpp  task2_benchmark_results.csv  verify_results.cpp
lab3/task2/AddTask/: CMakeLists.txt  README.md  example_add_async.cpp  example_add_package.cpp
task1/: CMakeLists.txt  sinus.cpp  task1.cpp
